<resources>
    <string name="app_name">الـــرعـــية</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="church_name_hint">اسم الكنيسة</string>
    <string name="adding_church_title">اضــافـة كـنـيـسـة</string>
    <string name="password_label">الرقم السري</string>
    <string name="adding_address_label">اضافة عنوان علي الخريطة</string>
    <string name="save_label">حفظ</string>
    <string name="enter_label">دخول</string>
    <string name="church_name_error_msg">برجاء ادخال اسم الكنيسة</string>
    <string name="password_error_msg">برجاء ادخال الرقم السري</string>
    <string name="password_weak_msg">يجب الا يقل الرقم السري عن 8 ارقام</string>
    <string name="church_key">Church</string>
    <string name="member_key">Members</string>
    <string name="addingChurch_successfully_msg">تم اضافة الكنيسة بنجاح</string>
    <string name="err_try_again_msg">حدثت مشكلة..برجاء المحاولة مرة اخري</string>
    <string name="church_id_key">churchId</string>
    <string name="family_no_label">عدد الأسر</string>
    <string name="home_name_label">اسم المنزل</string>
    <string name="member1_title">فرد 1</string>
    <string name="name_label">الاسم*</string>
    <string name="relation_label">صلة القرابة*</string>
    <string name="id_image_upload">رفع صورة البطاقة*</string>
    <string name="save_and_add_another_label">حفظ و اضافة فرد اخر</string>
    <string name="finally_save_btn">حفظ نهائي</string>
    <string name="MAP_API_KEY">AIzaSyBywd_oKxRc5XE1TracUyUVnYWTSPiMi7M</string>
    <string name="wrong_password_msg">تأكد من الرقم السري</string>
    <string name="sign_in_successfully_msg">تم الدخول بنجاح</string>
    <string name="search_label">بحث ..</string>


  <!-- google map dark style json -->
    <string name="style_json">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
  </string>
    <string name="empty_location_err">لم يتم تحديد العنوان!</string>
  <string name="add_church_address_msg">يجب ادخال عنوان الكنيسة</string>
  <string name="add_home_address_msg">يجب ادخال عنوان المنزل</string>
  <string name="adding_address_successfully">تمت اضافة العنوان</string>
    <string name="church_address_line_key">churchAddressLine</string>
    <string name="home_address_line_key">homeAddressLine</string>
    <string name="home_name_field_err">برجاء ادخال اسم المنزل</string>
  <string name="families_num_field_err">برجاء ادخال عدد الاسر</string>
  <string name="addingHome_successfully_msg">تم اضافة المنزل بنجاح</string>
  <string name="church_name_key">churchName</string>
  <string name="home_name_key">homeName</string>
  <string name="from_which_key">from_which_key</string>
    <string name="shared_preference_file_key">shared_pref_file_key</string>
  <string name="authenticated_key">authenticated</string>
  <string name="homes_list_key">homes</string>
  <string name="home_address_label">عنوان المنزل</string>
  <string name="home_families_label">الاسر</string>
  <string name="family_members_label">افراد الأسرة</string>
  <string name="add_family_label">اضف اسرة</string>
  <string name="add_member_label">اضف فرد للأسرة</string>
  <string name="homesListKey">homesList</string>
  <string name="home_index_key">homeIndex</string>
    <string name="home_key">home</string>
    <string name="familyNameId_key">familyNameId_key</string>
    <string name="family_key">family_key</string>
    <string name="memberName_key">memberName_key</string>
    <string name="detailed_address_hint">العنوان بالتفصيل</string>
  <string name="change_address_label">تغيير العنوان علي الخريطة</string>
  <string name="detailed_address_err">برجاء ادخال العنوان بالتفصيل</string>
  <string name="name_field_err">يجب ادخال الاسم</string>
    <string name="storage_folder_key">id_images</string>
    <string name="family_name_hint">اسم العائلة</string>
    <string name="floor_number_hint">رقم الطا بق</string>
    <string name="family_save_label">حفظ</string>
    <string name="families_collection_key">Families</string>
    <string name="homes_collection_key">Homes</string>
  <string name="family_adding_success_message">تم الاضافة بنجاح</string>
  <string name="family_adding_failure_message">هناك مشكلة، حاول مرة اخري</string>
  <string name="families_field_key">families</string>
  <string name="homeId_key">homeId</string>
  <string name="family_name_err">يجب ادخال اسم العائلة</string>
  <string name="floor_num_err">يجب ادخال رقم الطابق</string>
    <string name="id_image_label">صورة البطاقة</string>
    <string name="spiritual_father_label">اب الاعتراف*</string>
    <string name="spiritual_father_label2">اب الاعتراف</string>
  <string name="persons_filed_key">persons</string>
    <string name="collectionsKeys_key">collectionsKeys</string>
    <string name="phone_number_label">رقم الموبايل*</string>
  <string name="phone_field_err">يجب ادخال رقم الموبايل</string>
  <string name="spiritual_father_filed_err">يجب ادخال اسم اب الاعتراف</string>
  <string name="err_try_again_message">هناك مشكلة ، حاول مرة اخري</string>
  <string name="job_field_hint">الوظيفة*</string>
  <string name="family_name_key">familyName</string>
  <string name="home_address_key">homeAddress</string>
  <string name="address_label">العنوان</string>
  <string name="job_label">الوظيفة</string>
  <string name="home_info_label">بيانات المنزل</string>
  <string name="family_info_label">بيانات العائلة</string>
    <string name="not_exist_label">لا يوجد</string>
  <string name="phone_num_label">رقم الموبايل</string>
    <string name="sign_in_successfully_message">تم الدخول بنجاح</string>
    <string name="search_err_message">ادخل كلمة البحث</string>
  <string name="family_label">أسرة</string>
  <string name="family_label2">اسرة</string>
  <string name="home_label">منزل</string>


  <array name="relations">
    <item>اب</item>
    <item>ام</item>
    <item>ابن</item>
    <item>ابنة</item>
  </array>


</resources>