<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_margin="@dimen/_40sdp"
        android:background="@drawable/stroke_background"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp"

        >

        <EditText
            android:id="@+id/family_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_name_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/family_floorNum_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/floor_number_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/family_name_field"

            />

        <Button
            android:id="@+id/save_family_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/black"
            android:text="@string/family_save_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/family_floorNum_field"
            app:layout_constraintVertical_bias="0.466" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/save_family_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/save_family_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>