<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_200">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/screen_margin"
            tools:context=".presentation.signin.SignInFragment">

            <ImageView
                android:id="@+id/church_icon"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/church_name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/church_icon">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/church_name_hint"
                    android:inputType="textPersonName"
                    android:id="@+id/churchName_auto_complete_tv"
                    android:textSize="@dimen/font_lg"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/church_name_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_label"
                    android:inputType="textPassword"
                    android:textSize="@dimen/font_lg"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/enter_label"
                android:textSize="@dimen/font_xlg"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/church_name_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_field" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/sign_in_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sign_in_btn" />


            <TextView
                android:id="@+id/adding_church_txt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center"
                android:text="@string/adding_church_title"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/font_lg"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
